# experiments

./: README.md
docs/: TODO.md
docs/decisions/: MINIDB_CONVENTION.md  MINIDB_DDL.md  MINIDB_DML.md  MINIDB_STORAGE.md
docs/journal/: 260505_MINIDB.md  260509_STORAGE_CONCERNS.md  260513_DML.md  260531_BINDER.md  260614_BINDER_REVISITED.md  260628_EVALUATOR.md  260704_WHATS_NEXT.md  260720_LOGICAL_OP.md
minidb/: .gitignore  CMakeLists.txt
minidb/include/minidb/: ast.hpp  ast_rewrite.hpp  catalog.hpp  database.hpp  ddl_ast.hpp  ddl_parser.hpp  dml_ast.hpp  enum.hpp  evaluator.hpp  greeting.hpp  iterator.hpp  logical_op.hpp  parser.hpp  storage.hpp  table.hpp  util_binary.hpp  value.hpp
minidb/src/: main.cpp
minidb/src/minidb/: ast_rewrite.cpp  catalog.cpp  database.cpp  ddl_parser.cpp  evaluator.cpp  greeting.cpp  iterator.cpp  parser.cpp  storage.cpp  table.cpp  util_binary.cpp
minidb/tests/: ast_rewrite_test.cpp  ast_test.cpp  catalog_test.cpp  database_test.cpp  ddl_ast_test.cpp  ddl_parser_test.cpp  dml_parser_test.cpp  evaluator_test.cpp  greeting_test.cpp  parser_test.cpp
